@@ -223,9 +223,21 @@ ptp_usb_getdata (PTPParams* params, PTPContainer* ptp,
 
 	do {
 		unsigned int len, rlen;
+
 		/* read the header and potentially the first data */
-		ret=params->read_func((unsigned char *)&usbdata,
-				sizeof(usbdata), params->data, &rlen);
+		if (params->response_packet_size > 0) {
+			/* If there is a buffered packet, just use it. */
+			memcpy((unsigned char *)&usbdata, params->response_packet, params->response_packet_size);
+			rlen = params->response_packet_size;
+			free(params->response_packet);
+			params->response_packet = NULL;
+			params->response_packet_size = 0;
+			/* Here this signifies a "virtual read" */
+			ret = PTP_RC_OK;
+		} else {
+			ret=params->read_func((unsigned char *)&usbdata,
+					      sizeof(usbdata), params->data, &rlen);
+		}
 		if (ret!=PTP_RC_OK) {
 			ret = PTP_ERROR_IO;
 			break;
@@ -268,10 +280,27 @@ ptp_usb_getdata (PTPParams* params, PTPContainer* ptp,
 			return PTP_RC_OK;
 		}
 		if (rlen > dtoh32(usbdata.length)) {
-			/* I observed this on iRiver MTP devices. -Marcus */
-			ptp_debug (params, "ptp2/ptp_usb_getdata: read %d bytes too much, expect problems!", rlen - dtoh32(usbdata.length)
-			);
-			rlen = dtoh32(usbdata.length);
+			/*
+			 * Buffer the surplus response packet if it is >= PTP_USB_BULK_HDR_LEN
+			 * (i.e. it is probably an entire package)
+			 * else discard it as erroneous surplus data. This will even
+			 * work if more than 2 packets appear in the same transaction,
+			 * they will just be iteratively handled.
+			 *
+			 * Marcus observed stray bytes on iRiver devices, these are
+			 * still discarded.
+			 */
+			unsigned int packlen = dtoh32(usbdata.length);
+			unsigned int surplen = rlen - packlen;
+
+			if (surplen >= PTP_USB_BULK_HDR_LEN) {
+				params->response_packet = (uint8_t *) malloc(surplen);
+				memcpy(params->response_packet, (uint8_t *) (&usbdata + packlen), surplen);
+				params->response_packet_size = surplen;
+			} else {
+				ptp_debug (params, "ptp2/ptp_usb_getdata: read %d bytes too much, expect problems!", rlen - dtoh32(usbdata.length));
+			}
+			rlen = packlen;
 		}
 
 		/* For most PTP devices rlen is 512 == sizeof(usbdata)
@@ -640,6 +669,9 @@ ptp_opensession (PTPParams* params, uint32_t session)
 	params->session_id=0x00000000;
 	/* TransactionID should be set to 0 also! */
 	params->transaction_id=0x0000000;
+	/* zero out response packet buffer */
+	params->response_packet = NULL;
+	params->response_packet_size = 0;
 	
 	PTP_CNT_INIT(ptp);
 	ptp.Code=PTP_OC_OpenSession;
@@ -666,6 +698,12 @@ ptp_closesession (PTPParams* params)
 
 	ptp_debug(params,"PTP: Closing session");
 
+	/* free any dangling response packet */
+	if (params->response_packet_size > 0) {
+		free(params->response_packet);
+		params->response_packet = NULL;
+		params->response_packet_size = 0;
+	}
 	PTP_CNT_INIT(ptp);
 	ptp.Code=PTP_OC_CloseSession;
 	ptp.Nparam=0;
